<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucentBackground">

    <View
        android:id="@+id/viewBackgroundBox"
        android:layout_width="275dp"
        android:layout_height="375dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/light_grey" />

    <TextView
        android:id="@+id/textAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_item_database"
        android:textColor="@color/overlay_hint"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/viewBackgroundBox"
        app:layout_constraintStart_toStartOf="@id/viewBackgroundBox"
        app:layout_constraintEnd_toEndOf="@id/viewBackgroundBox"/>

    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:autofillHints="item"
        android:hint="@string/item_name"
        android:inputType="text"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/overlay_hint"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/textAddItem"
        app:layout_constraintStart_toStartOf="@id/viewBackgroundBox"
        app:layout_constraintEnd_toEndOf="@id/viewBackgroundBox"/>

    <EditText
        android:id="@+id/editTextQty"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="Quantity"
        android:hint="@string/quantity"
        android:inputType="number"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/overlay_hint"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/editTextItemName"
        app:layout_constraintStart_toStartOf="@id/viewBackgroundBox"
        app:layout_constraintEnd_toEndOf="@id/viewBackgroundBox" />

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonAddItem"
        android:layout_marginBottom="100dp"
        android:text="@string/add_item"
        app:layout_constraintBottom_toBottomOf="@id/viewBackgroundBox"
        app:layout_constraintStart_toStartOf="@id/viewBackgroundBox"
        app:layout_constraintEnd_toEndOf="@id/viewBackgroundBox"/>

    <Button
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="buttonClose"
        android:text="@string/close"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@id/viewBackgroundBox"
        app:layout_constraintBottom_toBottomOf="@id/viewBackgroundBox" />

</androidx.constraintlayout.widget.ConstraintLayout>