<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucentBackground">

    <View
        android:id="@+id/viewBackgroundBox"
        android:layout_width="275dp"
        android:layout_height="375dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/light_grey" />

    <TextView
        android:id="@+id/textChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/changePassword"
        android:textColor="@color/overlay_hint"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/viewBackgroundBox"
        app:layout_constraintStart_toStartOf="@id/viewBackgroundBox"
        app:layout_constraintEnd_toEndOf="@id/viewBackgroundBox"/>

    <EditText
        android:id="@+id/editTextCurrentPassword"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:autofillHints="item"
        android:hint="@string/currentPassword"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/overlay_hint"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/textChangePassword"
        app:layout_constraintStart_toStartOf="@id/viewBackgroundBox"
        app:layout_constraintEnd_toEndOf="@id/viewBackgroundBox"/>

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="New Password"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/overlay_hint"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/editTextCurrentPassword"
        app:layout_constraintStart_toStartOf="@id/viewBackgroundBox"
        app:layout_constraintEnd_toEndOf="@id/viewBackgroundBox" />

    <EditText
        android:id="@+id/editTextNewPassword2"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="New Password"
        android:hint="@string/newPasswordAgain"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/overlay_hint"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/editTextNewPassword"
        app:layout_constraintStart_toStartOf="@id/viewBackgroundBox"
        app:layout_constraintEnd_toEndOf="@id/viewBackgroundBox" />

    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonChangePassword"
        android:layout_marginTop="10dp"
        android:text="@string/changePassword"
        app:layout_constraintTop_toBottomOf="@id/editTextNewPassword2"
        app:layout_constraintStart_toStartOf="@id/viewBackgroundBox"
        app:layout_constraintEnd_toEndOf="@id/viewBackgroundBox"/>

    <Button
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="buttonClose"
        android:text="@string/close"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@id/viewBackgroundBox"
        app:layout_constraintBottom_toBottomOf="@id/viewBackgroundBox" />

</androidx.constraintlayout.widget.ConstraintLayout>